# ccurlshortener

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  test.sh  testing.py
src/: backend.rs  db.rs  lib.rs  main.rs
src/backend/: db.rs  web.rs
tests/: load.py  load.sh
